# simple-pdf-rag

./: config.py  docker-compose.db.yml  embedder.py  load_pdf.py  main.py  pyproject.toml  retriever.py  split_text.py  vector_store.py
