[project]
name = "genai101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.55",
    "langchain-openai>=0.3.14",
    "langchain-qdrant>=0.2.0",
    "pypdf>=5.4.0",
    "qdrant-client>=1.14.1",
]
